--- a/src/AaxAudioConverter/MainForm.de.resx
+++ b/src/AaxAudioConverter/MainForm.de.resx
@@ -141,6 +141,9 @@
   <data name="clmHdrBitRate.Text" xml:space="preserve">
     <value>Bitrate</value>
   </data>
+  <data name="clmHdrFileDate.Text" xml:space="preserve">
+    <value>Datum Datei</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="listViewAaxFiles.Size" type="System.Drawing.Size, System.Drawing">
     <value>770, 194</value>
@@ -150,21 +153,18 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACK
-        AgAAAk1TRnQBSQFMAgEBAgEAASABAQEgAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABEP8A/wBsAAMDAQQDPAFmAzMBU/AAAx0BKQFaAV0BWgHKAQABXwEGAf8BAAFf
-        AQYB/wMjATTnAAEBA0ABcAFIAWIBSAH2AQABXwEGAf8BAAFfAQYB/wEAAV8BBgH/AVIBVAFSAabkAAEw
-        ATEBMAFNAQABXwEGAf8BAAFfAQYB/wEgAV8BKwH8AVoBXwFaAdsBAAFfAQYB/wEhAV8BJwH7AxYBHuAA
-        Ax8BLQFZAWcBWQHyAV4BYQFeAdoDJwE7ASECIgExAQABXwEGAf8BAAFfAQYB/wNKAYzkAAMFAQcDAgED
-        CAABVgFZAVYBvgEAAV8BBgH/AU4BXQFOAfADCgEO8AADMAFMAQABXwEGAf8BAAFfAQYB/wNAAXHzAAEB
-        AVkBXQFZAdcBAAFfAQYB/wFXAVwBVwHfAwMBBPAAATwBPQE8AWcBAAFfAQYB/wEAAV8BBgH/AzUBVvAA
-        AwcBCQFVAVwBVQHqAQABXwEGAf8DWwHI9AABRgFHAUYBgQEAAV8BBgH/AQABXwEGAf8DJAE28AADEQEX
+        AgAAAk1TRnQBSQFMAgEBAgEAASgBAQEoAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABEP8A/wBsAAMDAQQDPAFmAzMBU/AAAx0BKQFaAV0BWgHKAQABXgEFAf8BAAFe
+        AQUB/wMjATTnAAEBA0ABcAFIAWIBSAH2AQABXgEFAf8BAAFeAQUB/wEAAV4BBQH/AVIBVAFSAabkAAEw
+        ATEBMAFNAQABXgEFAf8BAAFeAQUB/wEhAV4BKwH8AVoBXwFaAdsBAAFeAQUB/wEhAV8BJwH7AxYBHuAA
+        Ax8BLQFZAWcBWQHyAV4BYQFeAdoDJwE7ASECIgExAQABXgEFAf8BAAFeAQUB/wNKAYzkAAMFAQcDAgED
+        CAABVgFZAVYBvgEAAV4BBQH/AU4BXQFOAfADCgEO8AADMAFMAQABXgEFAf8BAAFeAQUB/wNAAXHzAAEB
+        AVkBXQFZAdcBAAFeAQUB/wFXAVwBVwHfAwMBBPAAATwBPQE8AWcBAAFeAQUB/wEAAV4BBQH/AzUBVvAA
+        AwcBCQFVAVwBVQHqAQABXgEFAf8DWwHI9AABRgFHAUYBgQEAAV4BBQH/AQABXgEFAf8DJAE28AADEQEX
         AU4BXQFOAfABIQFfAScB+wMgAS/0AAMSBBgBIf8AjQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
         AQEFAAGAFwAD/wEABP8EAAT/BAAC/wH8AX8EAAL/AfgBPwQAAv8B4AE/BAAC/wHgAR8EAAL/AeABHwQA
         Av8B8wEPBAAD/wEPBAAD/wEHBAAD/wGHBAAD/wGHBAAD/wHDBAAD/wHDBAAD/wHnBAAE/wQACw==
 </value>
-  </data>
-  <data name="listViewAaxFiles.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="btnRem.Size" type="System.Drawing.Size, System.Drawing">
     <value>85, 23</value>
@@ -193,8 +193,12 @@ und zu Liste hinzufügen.
   <data name="grpBoxAaxFiles.Text" xml:space="preserve">
     <value>AAX-Dateien</value>
   </data>
-  <data name="grpBoxAaxFiles.ToolTip" xml:space="preserve">
-    <value />
+  <data name="grpBoxMode.Text" xml:space="preserve">
+    <value>Modus</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="panelTrkLen.Enabled" type="System.Boolean, mscorlib">
+    <value>False</value>
   </data>
   <data name="lblDuration.Location" type="System.Drawing.Point, System.Drawing">
     <value>162, 10</value>
@@ -205,17 +209,11 @@ und zu Liste hinzufügen.
   <data name="lblDuration.Text" xml:space="preserve">
     <value>Minuten</value>
   </data>
-  <data name="lblDuration.ToolTip" xml:space="preserve">
-    <value />
-  </data>
   <data name="lblTraclLen.Size" type="System.Drawing.Size, System.Drawing">
     <value>105, 13</value>
   </data>
   <data name="lblTraclLen.Text" xml:space="preserve">
     <value>Länge je Stück etwa</value>
-  </data>
-  <data name="lblTraclLen.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="numUpDnTrkLen.Location" type="System.Drawing.Point, System.Drawing">
     <value>117, 6</value>
@@ -224,13 +222,6 @@ und zu Liste hinzufügen.
     <value>Angestrebte mittlere Länge eines Stücks.
 Tatsächliche Länge richtet sich nach Gesamtlänge
 und verfügbaren Stille-Intervallen.</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="panelTrkLen.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="panelTrkLen.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="radBtnTimeSplit.Size" type="System.Drawing.Size, System.Drawing">
     <value>301, 17</value>
@@ -278,11 +269,8 @@ mit Wiedergabeliste.
     <value>Eine Audiodatei je AAX-Datei,
 mit Wiedergabeliste bei mehrteiligen Büchern.</value>
   </data>
-  <data name="grpBoxMode.Text" xml:space="preserve">
-    <value>Modus</value>
-  </data>
-  <data name="grpBoxMode.ToolTip" xml:space="preserve">
-    <value />
+  <data name="panelExec.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 496</value>
   </data>
   <data name="vprogbarCpu.ToolTip" xml:space="preserve">
     <value>Relative CPU-Auslastung</value>
@@ -332,17 +320,8 @@ Momentan bearbeitete Kapitel.
   <data name="btnConvert.ToolTip" xml:space="preserve">
     <value>Konvertierung starten.</value>
   </data>
-  <data name="panelExec.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 496</value>
-  </data>
-  <data name="panelExec.ToolTip" xml:space="preserve">
-    <value />
-  </data>
   <data name="radBtnMp3.ToolTip" xml:space="preserve">
     <value>Zu MP3 umwandeln.</value>
-  </data>
-  <data name="grpBoxFormat.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="btnSaveTo.Size" type="System.Drawing.Size, System.Drawing">
     <value>85, 23</value>
@@ -355,9 +334,6 @@ Momentan bearbeitete Kapitel.
 Bücher werden nach Autor und Titel sortiert. 
 </value>
   </data>
-  <data name="propGridNaming.ToolTip" xml:space="preserve">
-    <value />
-  </data>
   <data name="grpBoxNaming.Text" xml:space="preserve">
     <value>Namensgebung</value>
   </data>
@@ -365,29 +341,17 @@ Bücher werden nach Autor und Titel sortiert.
     <value>Verschiedene Einstellungen zur Namensgebung 
 für Tags, Ordner und Dateien.</value>
   </data>
-  <data name="lblSaveTo.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="grpBoxDest.Text" xml:space="preserve">
-    <value>Zielordner</value>
-  </data>
-  <data name="grpBoxDest.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="panelSettingsLeft.ToolTip" xml:space="preserve">
-    <value />
+  <data name="panelTop.Size" type="System.Drawing.Size, System.Drawing">
+    <value>782, 496</value>
   </data>
   <data name="tableLayoutSettings.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 248</value>
   </data>
-  <data name="tableLayoutSettings.ToolTip" xml:space="preserve">
-    <value />
+  <data name="grpBoxDest.Text" xml:space="preserve">
+    <value>Zielordner</value>
   </data>
-  <data name="panelTop.Size" type="System.Drawing.Size, System.Drawing">
-    <value>782, 496</value>
-  </data>
-  <data name="panelTop.ToolTip" xml:space="preserve">
-    <value />
+  <data name="contextMenuStrip1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>176, 48</value>
   </data>
   <data name="tsmiDetails.Size" type="System.Drawing.Size, System.Drawing">
     <value>175, 22</value>
@@ -400,12 +364,6 @@ für Tags, Ordner und Dateien.</value>
   </data>
   <data name="tsmiPreview.Text" xml:space="preserve">
     <value>Vorschau / Anpassen</value>
-  </data>
-  <data name="contextMenuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>176, 48</value>
-  </data>
-  <data name="contextMenuStrip1.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>782, 572</value>
@@ -665,8 +623,5 @@ für Tags, Ordner und Dateien.</value>
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAH//rEH//6xBAACsQQAArEEAAKxBAACsQQAArEEAAKxBAACsQQAA
         rEEAAKxBAACsQQAArEHv/6xB//+sQf//rEE=
 </value>
-  </data>
-  <data name="$this.ToolTip" xml:space="preserve">
-    <value />
   </data>
 </root>
