--- a/src/AaxAudioConverter/PGANaming.de.resx
+++ b/src/AaxAudioConverter/PGANaming.de.resx
@@ -135,12 +135,11 @@
   <data name="TrackNumberingDescription" xml:space="preserve">
     <value>Nummerierung der einzelnen Stücke im Titel-Tag. Platzhalter werden durch aktuelle Werte ersetzt. Nur für Modus "Unterteile Kapitel".</value>
   </data>
-  <data name="Narrator" xml:space="preserve">
-    <value>Sprecher hinzufügen</value>
+  <data name="TotalTracks" xml:space="preserve">
+    <value>Gesamtzahl Stücke hinzufügen</value>
   </data>
-  <data name="NarratorDescription" xml:space="preserve">
-    <value>Fügt Namen des Sprechers zum Künstler-Tag hinzu, wenn [ja].
-Wirkung kann in den Grundeinstellungen angepasst werden.</value>
+  <data name="TotalTracksDescription" xml:space="preserve">
+    <value>Ergänzt die Nummerierung der Stücke um deren Gesamtzahl, wenn [ja].</value>
   </data>
   <data name="GenreNaming" xml:space="preserve">
     <value>Namensgebung Genre</value>
